tests/paczka1/small_fuzzy/68491498.err
Error in line 1: QWm7fBW9 A434 99,7
Error in line 4: ZhWrM7PH A434 47,5
Error in line 14: A247 A247 14,3
